# gesture_detection

./: .gitignore  CMakeLists.txt  README.md  binary_mask_creator.cpp  binary_mask_creator.h  gesture_detector.cpp  gesture_detector.h  gestures  gestures.cpp  hand_roi.cpp  hand_roi.hpp  main.cpp
